--- a/index.html
+++ b/index.html
@@ -349,25 +349,25 @@
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/codex.png " alt="Executor 2"/>
         <p class="info-text">CODEX</p>
-        <a class="button" href="https://codex.lol/" target="_blank">Tải về</a>
+        <a class="button" id="btn-codex-vng" href="https://codex.lol/" target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up">
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/arcx.png " alt="Executor 3"/>
         <p class="info-text">ARCEUS-X-NEO</p>
-        <a class="button" href="https://spdmteam.com/index?os=android" target="_blank">Tải về</a>
+        <a class="button" id="btn-arceus-vng" href="https://spdmteam.com/index?os=android" target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up">
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/K.svg" alt="Executor 4"/>
         <p class="info-text">KRNL</p>
-        <a class="button" href="https://krnl.cat/" target="_blank">Tải về</a>
+        <a class="button" id="btn-krnl-vng" href="https://krnl.cat/" target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up">
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/cry.webp" alt="Executor 4"/>
         <p class="info-text">CRYPTIC</p>
-        <a class="button" href="https://getcryptic.net/" target="_blank">Tải về</a>
+        <a class="button" id="btn-cryptic" href="https://getcryptic.net/" target="_blank">Tải về</a>
       </div>
     </div>
   </div>
@@ -381,31 +381,31 @@
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/deltax.png" alt="Executor 1"/>
         <p class="info-text">DELTA-X</p>
-        <a class="button" href=" https://deltaexploits.gg/delta-executor-android" target="_blank">Tải về</a>
+        <a class="button" id="btn-delta" href="https://deltaexploits.gg/delta-executor-android" target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up">
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/codex.png " alt="Executor 2"/>
         <p class="info-text">CODEX</p>
-        <a class="button" href="https://codex.lol/" target="_blank">Tải về</a>
+        <a class="button" id="btn-codex" href="https://codex.lol/" target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up">
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/arcx.png" alt="Executor 3"/>
         <p class="info-text">ARCEUS-X-NEO</p>
-        <a class="button" href="https://spdmteam.com/index?os=android" target="_blank">Tải về</a>
+        <a class="button" id="btn-arceus" href="https://spdmteam.com/index?os=android" target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up ">
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/tri.png" alt="Executor 4"/>
         <p class="info-text">TRIGON</p>
-        <a class="button" href="https://trigonevo.com/android/ " target="_blank">Tải về</a>
+        <a class="button" id="btn-trigon" href="https://trigonevo.com/android/ " target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up ">
         <div class="status-label">Hoạt động</div>
         <img src="https://cdn.discordapp.com/attachments/1399335670065008791/1410805932652363917/2025082908582972.png?ex=68b25ae9&is=68b10969&hm=298dbae5956e74ef3b4f6acf145a75b2b2005e2a45b782c9e4c3a86cf842b849&" alt="Executor 4"/>
         <p class="info-text">RONIX</p>
-        <a class="button" href="https://ronixstudios.com/" target="_blank">Tải về</a>
+        <a class="button" id="btn-ronix" href="https://ronixstudios.com/" target="_blank">Tải về</a>
       </div>
     </div>
   </div>
@@ -418,25 +418,25 @@
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/deltax.png" alt="Executor IOS 1"/>
         <p class="info-text">DELTA-X</p>
-        <a class="button" href="https://deltaexploits.gg/delta-executor-ios" target="_blank">Tải về</a>
+        <a class="button" id="btn-delta-ios" href="https://deltaexploits.gg/delta-executor-ios" target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up ">
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/arcx.png" alt="Executor IOS 2"/>
         <p class="info-text">ARCUES-X-NEO</p>
-        <a class="button" href="https://spdmteam.com/index?os=android" target="_blank">Tải về</a>
+        <a class="button" id="btn-arceus-ios" href="https://spdmteam.com/index?os=android" target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up ">
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/codex.png" alt="Executor IOS 3"/>
         <p class="info-text">CODEX</p>
-        <a class="button" href="https://codex.lol/" target="_blank">Tải về</a>
+        <a class="button" id="btn-codex-ios" href="https://codex.lol/" target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up ">
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/K.svg" alt="Executor IOS 4"/>
         <p class="info-text">KRNL</p>
-        <a class="button" href="https://krnl.cat/" target="_blank">Tải về</a>
+        <a class="button" id="btn-krnl-ios" href="https://krnl.cat/" target="_blank">Tải về</a>
       </div>
     </div>
   </div>
@@ -448,7 +448,7 @@
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/K.svg" alt="Executor IOS 1"/>
         <p class="info-text">KRNL</p>
-        <a class="button" href="https://krnl.cat/" target="_blank">Tải về</a>
+        <a class="button" id="btn-krnl-vng-ios" href="https://krnl.cat/" target="_blank">Tải về</a>
       </div>
     </div>
   </div>
@@ -460,44 +460,44 @@
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/codex.png" alt="Executor PC 1"/>
         <p class="info-text">CODEX</p>
-        <a class="button" href="https://codex.lol/" target="_blank">Tải về</a>
+        <a class="button" id="btn-codex-pc" href="https://codex.lol/" target="_blank">Tải về</a>
       </div>
      
       <div class="executor-card fade-in-up ">
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/Sw.webp" alt="Executor PC 2"/>
         <p class="info-text">TAYLOR-SWIFT</p>
-        <a class="button" href="https://getswift.gg/" target="_blank">Tải về</a>
+        <a class="button" id="btn-swift" href="https://getswift.gg/" target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up ">
         <div class="status-label">Hoạt động</div>
         <img src="https://images.crunchbase.com/image/upload/c_pad,f_auto,q_auto:eco,dpr_1/ad789f5f19f8483da06d1f6a0a8ab9bc" alt="Executor PC 3"/>
         <p class="info-text">XENO</p>
-        <a class="button" href="https://www.xeno.onl/download" target="_blank">Tải về</a>
+        <a class="button" id="btn-xeno" href="https://www.xeno.onl/download" target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up ">
         <div class="status-label">Hoạt động</div>
         <img src="https://executors-lion-hub.netlify.app/arcx.png" alt="Executor PC 4"/>
         <p class="info-text">ARCEUS-X-NEO</p>
-        <a class="button" href="https://spdmteam.com/index?os=android" target="_blank">Tải về</a>
+        <a class="button" id="btn-arceus-pc" href="https://spdmteam.com/index?os=android" target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up ">
         <div class="status-label">Hoạt động</div>
         <img src="https://cdn.discordapp.com/attachments/1312651002264158318/1412654119130370110/2025082908582972.png?ex=68b9142b&is=68b7c2ab&hm=8dee219fedbfba7bb76bf53f135b52a287bd854cac4966d32c0f84ebf5b10c55&" alt="Executor PC 4"/>
         <p class="info-text">RONIX</p>
-        <a class="button" href="https://ronixstudios.com/ " target="_blank">Tải về</a>
+        <a class="button" id="btn-ronix-pc" href="https://ronixstudios.com/ " target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up ">
         <div class="status-label">Hoạt động</div>
         <img src="https://cdn.discordapp.com/attachments/1312651002264158318/1412654118820122747/image.png?ex=68b9142b&is=68b7c2ab&hm=e808a78f0603a25fe77d46c97408942650a03c4ca834943c7f8ed820c85f1d16&" alt="Executor PC 5"/>
         <p class="info-text">VOLCANO</p>
-        <a class="button" href=" https://volcano.wtf/" target="_blank">Tải về</a>
+        <a class="button" id="btn-volcano" href=" https://volcano.wtf/" target="_blank">Tải về</a>
       </div>
       <div class="executor-card fade-in-up ">
         <div class="status-label">Hoạt động</div>
         <img src=" https://cdn.discordapp.com/attachments/1330017042459394138/1412737825102888982/Hydrogen-Executor-Logo-img.webp?ex=68ba0ae0&is=68b8b960&hm=5d64f7e493968b50b94100f29dfc16ee8eaa0e829df4aa43955c708e08d8e65b&" alt="Executor PC "/>
         <p class="info-text">HYDROGEN</p>
-        <a class="button" href="https://hydrogen.lat/" target="_blank">Tải về</a>
+        <a class="button" id="btn-hydrogen" href="https://hydrogen.lat/" target="_blank">Tải về</a>
       </div>
     </div>
   </div>
@@ -533,6 +533,49 @@
   </div>
 
   <canvas id="galaxy" aria-hidden="true"></canvas>
+
+  <script>
+    function updateLinks() {
+      // fetch với timestamp để tránh cache
+      fetch('links.json?t=' + Date.now())
+        .then(response => response.json())
+        .then(data => {
+          // Cập nhật cho tất cả các nút có ID tương ứng
+          if(data.delta) {
+             if(document.getElementById('btn-delta')) document.getElementById('btn-delta').href = data.delta;
+             if(document.getElementById('btn-delta-ios')) document.getElementById('btn-delta-ios').href = data.delta;
+          }
+          if(data.codex) {
+             const ids = ['btn-codex', 'btn-codex-vng', 'btn-codex-ios', 'btn-codex-pc'];
+             ids.forEach(id => { if(document.getElementById(id)) document.getElementById(id).href = data.codex; });
+          }
+          if(data.arceus) {
+             const ids = ['btn-arceus', 'btn-arceus-vng', 'btn-arceus-ios', 'btn-arceus-pc'];
+             ids.forEach(id => { if(document.getElementById(id)) document.getElementById(id).href = data.arceus; });
+          }
+          if(data.krnl) {
+             const ids = ['btn-krnl-vng', 'btn-krnl-ios', 'btn-krnl-vng-ios'];
+             ids.forEach(id => { if(document.getElementById(id)) document.getElementById(id).href = data.krnl; });
+          }
+          // Thêm các key khác tương tự
+          if(data.swift) document.getElementById('btn-swift').href = data.swift;
+          if(data.xeno) document.getElementById('btn-xeno').href = data.xeno;
+          if(data.volcano) document.getElementById('btn-volcano').href = data.volcano;
+          if(data.hydrogen) document.getElementById('btn-hydrogen').href = data.hydrogen;
+          if(data.ronix) {
+             if(document.getElementById('btn-ronix')) document.getElementById('btn-ronix').href = data.ronix;
+             if(document.getElementById('btn-ronix-pc')) document.getElementById('btn-ronix-pc').href = data.ronix;
+          }
+        })
+        .catch(err => console.error("Không lấy được link mới:", err));
+    }
+
+    // Tự động kiểm tra link mỗi 10 giây
+    setInterval(updateLinks, 10000);
+    // Chạy ngay khi load trang
+    window.onload = updateLinks;
+  </script>
+
   <script>
     const cvs=document.getElementById('galaxy'), ctx=cvs.getContext('2d');
     let W,H,stars=[],meteors=[];
@@ -616,7 +659,7 @@
         },
         {
           title: "Anh Vui - Phạm Kỳ",
-          url: "https://github.com/QUYDEPTRAI499/Music-web/raw/refs/heads/main/Anh%20Vui%20-%20Ph%E1%BA%A1m%20K%E1%BB%B3%20(Duzme%20Remix)%20%20Anh%20Vui%20%C4%90%E1%BA%BFn%20N%E1%BB%97i%20Ngh%E1%BA%B9n%20Ng%C3%A0o...Remix%20Tik%20Tok%20-%20Duzme%20Music.mp3"
+          url: "https://github.com/QUYDEPTRAI499/Music-web/raw/refs/heads/main/Anh%20Vui%20-%20Ph%E1%BA%A1m%20K%E1%BB%B3%20(Duzme%20Remix)%20%20Anh%20Vui%20%C4%90%E1%BF%BFn%20N%E1%BB%97i%20Ngh%E1%BA%B9n%20Ng%C3%A0o...Remix%20Tik%20Tok%20-%20Duzme%20Music.mp3"
         }
       ];
       let currentSongIndex = 0;
@@ -676,13 +719,3 @@
 </script>
 </body>
 </html>
-<script>
-  // Hàm tự động cập nhật link từ file JSON
-  fetch('links.json')
-    .then(response => response.json())
-    .then(data => {
-      if(data.delta) document.getElementById('btn-delta').href = data.delta;
-      if(data.codex) document.getElementById('btn-codex').href = data.codex;
-    })
-    .catch(err => console.error("Không lấy được link mới:", err));
-</script>
